--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ flask-login = "^0.6.2"
 flask-sqlalchemy = "^3.0.5"
 psycopg2 = "^2.9.7"
 load-dotenv = "^0.1.0"
+flask-migrate = "^4.0.4"
 
 [tool.poetry.dev-dependencies]
 
