Alterações para o funcionamento das telas de cadastro de inscritos.

--- a/instance/app.cfg
+++ b/instance/app.cfg
@@ -11,6 +11,7 @@ DATABASE_PORT = os.getenv("DATABASE_PORT", "5432")
 
 # Get the folder of the top-level directory of this project
 BASEDIR = os.path.abspath(os.path.dirname(__file__))
+UPLOAD_FOLDER = "/home/edsf/Imagens"
 
 SQLALCHEMY_DATABASE_URI = f"postgresql://{DATABASE_USERNAME}:{DATABASE_PASSWORD}@{DATABASE_HOST}:{DATABASE_PORT}/encontros"
 SQLALCHEMY_TRACK_MODIFICATIONS = False
