--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ flask-sqlalchemy = "^3.0.5"
 psycopg2 = "^2.9.7"
 load-dotenv = "^0.1.0"
 flask-migrate = "^4.0.4"
+gunicorn = "^21.2.0"
 
 [tool.poetry.dev-dependencies]
 
