--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -14,6 +14,7 @@ psycopg2 = "^2.9.7"
 load-dotenv = "^0.1.0"
 flask-migrate = "^4.0.4"
 boto3 = "^1.28.48"
+flask-hashids = "^1.0.2"
 
 [tool.poetry.dev-dependencies]
 
