--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -18,6 +18,10 @@ flask-hashids = "^1.0.2"
 
 [tool.poetry.dev-dependencies]
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.4.2"
+pytest-flask = "^1.2.0"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
