--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -21,6 +21,7 @@ flask-hashids = "^1.0.2"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.2"
 pytest-flask = "^1.2.0"
+faker = "^19.11.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
